# EJCO-Benchmark

./: .gitignore  README.md  __main__.py  pyproject.toml
1_85x/: __main__.py  gj.json
ablation/O0/: 10a.sdql  11a.sdql  11c.sdql  11d.sdql  12a.sdql  13b.sdql  14a.sdql  14b.sdql  14c.sdql  15b.sdql  15c.sdql  15d.sdql  16a.sdql  16c.sdql  17a.sdql  17c.sdql  17e.sdql  17f.sdql  18b.sdql  19a.sdql  19c.sdql  19d.sdql  1b.sdql  1c.sdql  1d.sdql  20a.sdql  20b.sdql  21c.sdql  22a.sdql  22b.sdql  22c.sdql  23b.sdql  23c.sdql  25c.sdql  26c.sdql  27b.sdql  28a.sdql  28c.sdql  29a.sdql  2a.sdql  (+17 more)
ablation/O1/: 10a.sdql  11a.sdql  11d.sdql  12a.sdql  14a.sdql  14c.sdql  15c.sdql  15d.sdql  17a.sdql  17c.sdql  17d.sdql  17e.sdql  18b.sdql  18c.sdql  19a.sdql  19b.sdql  19c.sdql  19d.sdql  1a.sdql  1b.sdql  20a.sdql  20c.sdql  21a.sdql  22a.sdql  22b.sdql  22c.sdql  22d.sdql  23a.sdql  23b.sdql  23c.sdql  24b.sdql  25a.sdql  25b.sdql  25c.sdql  26a.sdql  26b.sdql  26c.sdql  27b.sdql  27c.sdql  29a.sdql  (+25 more)
ablation/O2/: 10a.sdql  10c.sdql  11a.sdql  11c.sdql  12c.sdql  13c.sdql  14c.sdql  15a.sdql  15c.sdql  15d.sdql  16d.sdql  17a.sdql  17b.sdql  19a.sdql  19c.sdql  19d.sdql  1b.sdql  1c.sdql  1d.sdql  20a.sdql  20b.sdql  20c.sdql  21b.sdql  22a.sdql  22c.sdql  23b.sdql  24b.sdql  25b.sdql  26a.sdql  27a.sdql  27c.sdql  28c.sdql  (+23 more)
gj_hybrid/: __main__.py
helpers/: ablations.py  check_progs.py  checks.py  constants.py  free_join.py  plot.py  scaling_factors.py  wcoj.py  wcoj_lsqb.py
plots/: .gitignore
scripts/: codegen.sh  compile.sh  run.sh
sdql-vs-cpp/: __main__.py
(+1044 files in other folders)
