[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
pandas = "2.2.3"
matplotlib = "3.9.2"
numpy = "2.1.1"
pydantic = "2.9.2"
seaborn = "0.13.2"

[tool.poetry.dev-dependencies]
black = "24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
